# Fe-El-Seka-application-project

./: .dockerignore  .env.example  .env.prod.example  .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  RUNNING.md  docker-compose.prod.yml  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  review-flow.md
.specify/: feature.json
services/ai/: .dockerignore  .env.example  Dockerfile  pyproject.toml  ruff.toml
services/ai/app/: config.py  main.py
services/ai/app/api/: health.py
services/ai/app/core/: config.py
services/ai/app/models/: health.py  prediction.py  registry.py
services/ai/app/routers/: health.py  models.py  predict.py
services/ai/app/services/: feature_engineering.py  match_scorer.py  model_registry.py  price_recommender.py  ride_ranker.py
services/ai/data/: .gitignore
services/ai/pipelines/dataset/: generate_rides.py  ingest_osm.py  run.py  zones.py
services/ai/pipelines/features/: engineer.py  run.py
services/ai/pipelines/training/: evaluate.py  run.py  train_match_score.py  train_price.py  train_ranker.py  upload.py
services/ai/scripts/: load_test.py  validate_determinism.py
services/api/: .dockerignore  .env.example  Dockerfile  pyproject.toml
services/api/app/: main.py
services/api/app/api/: health.py
services/api/app/core/: config.py  database.py
services/api/app/dependencies/: auth.py  roles.py  verification.py
services/api/app/models/: ai.py  auth.py  booking.py  device_token.py  location.py  profile.py  ride.py  route.py  vehicle.py  verification.py  wallet.py
(+337 files in other folders)
