[project]
name = "fe-el-seka-ai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic-settings>=2.2.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "osmnx>=1.9.0",
    "numpy>=1.26.0",
    "supabase>=2.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "pipelines"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
